<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="home_screen_logo_description">Image of ballot</string>
    <string name="upcoming_elections_text">Upcoming elections</string>
    <string name="representatives_text">Find my representatives</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_photo">Representative photo</string>
    <string name="twitter_icon">Twitter icon</string>
    <string name="facebook_icon">Facebook icon</string>
    <string name="www_icon">Globe icon</string>
    <string name="location_service_rationale">Your local representatives cannot be shown with location services disabled.</string>
    <string name="location_permission_rationale">Location permission is required to display representatives in your current location.</string>
    <string name="location_failed">Failed to get your location!</string>
    <string name="settings">Settings</string>
    <string name="enable">Enable</string>
    <string name="failed_to_load_upcoming_elections">Failed to load upcoming elections: %1$s</string>
    <string name="failed_to_load_voter_info">Failed to load voter info: %1$s</string>
    <string name="failed_to_load_representatives">Failed to load representatives: %1$s</string>
    <string name="connection_error_image">Connection error image</string>
    <string name="error_address_line1">Please fill in first address line</string>
    <string name="error_city">Please enter a city</string>
    <string name="error_state">Please select a state</string>
    <string name="error_zip">Please enter a zip code</string>
</resources>
