<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/double_padding"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/home_screen_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_screen_logo_description"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_elections_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ballot_logo" />

        <Button
            android:id="@+id/upcoming_elections_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections_text"
            android:layout_marginHorizontal="@dimen/default_padding"
            app:layout_constraintBottom_toTopOf="@+id/representatives_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/representatives_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/representatives_text"
            android:layout_marginHorizontal="@dimen/default_padding"
            android:layout_marginVertical="@dimen/default_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>