<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="@dimen/representative_photo_size"
            android:layout_height="@dimen/representative_photo_size"
            android:contentDescription="@string/representative_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/representative_title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@sample/office_names" />

        <TextView
            android:id="@+id/representative_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/half_padding"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@+id/representative_party_text_view"
            app:layout_constraintStart_toStartOf="@+id/representative_title_text_view"
            app:layout_constraintTop_toBottomOf="@+id/representative_title_text_view"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/representative_party_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/representative_title_text_view"
            tools:text="@sample/party_names" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:contentDescription="@string/twitter_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/representative_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_marginEnd="@dimen/facebook_icon_margin"
            android:contentDescription="@string/facebook_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/representative_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_facebook"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="@dimen/social_icon_size"
            android:layout_height="@dimen/social_icon_size"
            android:layout_marginEnd="@dimen/www_icon_margin"
            android:contentDescription="@string/www_icon"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/representative_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_www"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>